Adding 'Always on top' behavior to the It2Me Confirmation Dialog

This CL sets a flag on the It2MeConfirmationDialog created on Windows which
causes it to be displayed as a top-level window.  I've also added a call to
ensure the dialog is above any other top-level window.

These two changes will ensure the dialog is displayed over the other windows
on the desktop, regardless of whethet they are topmost windows or not.

BUG=654938

Review-Url: https://codereview.chromium.org/2418613003
Cr-Commit-Position: refs/heads/master@{#424883}

Former-commit-id: 37d4966ef8a8e5cc5b83d7892f1622f679529d93